--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "server.ts",
   "scripts": {
-    "start": "nodemon server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
     "dev": "ts-node server.ts"
   },
   "keywords": [],
